# dog

./: .gitignore  README.md  deploy_robot  leggedrobot_flat.xml  main.cpp  observations.cpp  observations.hpp  pyproject.toml
DOGV2.2.4.SLDASM/: DOGV2.2.4.SLDASM.urdf
DOGV2.2.4.SLDASM/DOGV2.2.4.SLDASM/: package.xml
DOGV2.2.4.SLDASM/DOGV2.2.4.SLDASM/config/: joint_names_狗V2.2.4.SLDASM.yaml
DOGV2.2.4.SLDASM/DOGV2.2.4.SLDASM/launch/: display.launch  gazebo.launch
DOGV2.2.4.SLDASM/DOGV2.2.4.SLDASM/meshes/: leggedrobot.xml  leggedrobot_test.xml
DOGV2.2.4.SLDASM/DOGV2.2.4.SLDASM/urdf/: 狗V2.2.4.SLDASM.csv  狗V2.2.4.SLDASM.urdf
deploy_robot_v2/: .gitignore  CMakeLists.txt  README.md
deploy_robot_v2/app/: policy_test_main.cpp  zero_calibration_main.cpp
deploy_robot_v2/core/: robot_bringup.cpp  robot_bringup.hpp  robot_config.hpp
deploy_robot_v2/docs/: TESTING_PROCEDURE.md
deploy_robot_v2/include/: observations.hpp  robstride.hpp  single_motor_control.hpp  tensorrt_inference.hpp
deploy_robot_v2/input/: gamepad_command_source.cpp  gamepad_command_source.hpp  input_source.cpp  input_source.hpp  keyboard_command_source.cpp  keyboard_command_source.hpp  ros2_command_source.cpp  ros2_command_source.hpp
deploy_robot_v2/logging/: session_logger.cpp  session_logger.hpp
deploy_robot_v2/logs/closedloop_20260322_171607/: frames.csv  meta.json
deploy_robot_v2/logs/closedloop_20260322_173436/: frames.csv
deploy_robot_v2/logs/closedloop_20260323_225702/: frames.csv
deploy_robot_v2/logs/session_1774162426/: frames.csv
deploy_robot_v2/logs/session_1774162480/: frames.csv
deploy_robot_v2/logs/session_1774162640/: frames.csv  meta.json
deploy_robot_v2/logs/session_1774163699/: meta.json
deploy_robot_v2/logs/session_1774165851/: frames.csv
deploy_robot_v2/logs/session_1774165985/: frames.csv
deploy_robot_v2/logs/shadow_20260322_160239/: frames.csv  meta.json
deploy_robot_v2/logs/shadow_20260322_162853/: frames.csv
deploy_robot_v2/logs/shadow_20260322_165757/: frames.csv  meta.json
deploy_robot_v2/logs/shadow_20260322_182154/: frames.csv
deploy_robot_v2/policy/: policy_runner.cpp  policy_runner.hpp
deploy_robot_v2/src/: observations.cpp  robstride.cpp  tensorrt_inference.cpp
deploy_robot_v2/src/can/: can_interface.cpp
deploy_robot_v2/src/imu/: serial.c
deploy_robot_v2/tools/: analyze_log.py  inspect_feedback_main.cpp  ramp_to_offset_main.cpp  shadow_policy_main.cpp
deploy_robot_v2/twin_panel/: .gitignore  README.md  pyproject.toml
deploy_robot_v2/twin_panel/core/: robot_config.hpp
deploy_robot_v2/twin_panel/include/: can_interface.hpp  robot_bringup.hpp
deploy_robot_v2/twin_panel/include/hw_cli/: command_parser.hpp  hw_agent.hpp  json_builder.hpp  types.hpp
deploy_robot_v2/twin_panel/local/: __init__.py  hw_ssh_bridge_worker.py  qt_ros2_twin_panel.py  robot_fixed.xml  ros_qt_node.py  sim_bridge_worker.py  twin_topics.py  ui_models.py
deploy_robot_v2/twin_panel/src/: can_interface.cpp  command_parser.cpp  hw_agent.cpp  json_builder.cpp  main.cpp  robot_bringup.cpp
deploy_robot_v3/: CMakeLists.txt  test.cpp
deploy_robot_v3/include/: minimal_dog.hpp  minimal_dog_cbinds.h  obs_builder.hpp
deploy_robot_v3/src/: main.cpp  minimal_dog.cpp  obs_builder.cpp
deploy_robot_v3/tests/: imu_tool_test.cpp  motor_tool_test.cpp  ros2_command_test.cpp
deploy_robot_v3/tool/: imu_reader.cpp  imu_reader.hpp  motor_io.cpp  motor_io.hpp  motor_math.cpp  motor_math.hpp  policy.cpp  policy.hpp  robot_constants.hpp  ros2_command_source.cpp  ros2_command_source.hpp
dog_cli_tool/: CMakeLists.txt  README.md
dog_cli_tool/daemon/: main.cpp  motor_io.cpp  twin_agent.cpp  twin_agent.hpp  twin_protocol.hpp
dog_cli_tool/python/: dog_cli.py  motor_config.py  robot_client.py  visualize.py
dog_cli_tool/scripts/: build_jetson.sh  example_session.sh  install_daemon.sh
dog_fullstack_bundle/: CLAUDE.md  README.md
dog_fullstack_bundle/backend/: README.md
dog_fullstack_bundle/backend/daemon/: motor_io.hpp  twin_agent.cpp  twin_agent.hpp
dog_fullstack_bundle/backend/prompts/: gemini_qt_frontend_prompt.md
dog_fullstack_bundle/backend/python/: dog_cli.py  experiment_manager.py  knee_processor.py  mock_daemon.py  recorder.py  replay_controller.py  robot_backend.py  robot_client.py
dog_fullstack_bundle/backend/wiki/: index.md
dog_fullstack_bundle/backend/wiki/daemon/: motor_io.md  overview.md  twin_agent.md
dog_fullstack_bundle/backend/wiki/frontend/: command_protocol.md  frontend_api_spec.md  state_stream_spec.md
dog_fullstack_bundle/backend/wiki/python/: dog_cli.md  experiment_manager.md  motor_config.md  overview.md  recorder.md  replay_controller.md  robot_backend.md  robot_client.md  visualize.md
dog_fullstack_bundle/frontend/: README.md  main.py  pyproject.toml  requirements.txt
dog_fullstack_bundle/frontend/app/: main_window.py  styles.py
dog_fullstack_bundle/frontend/app/models/: app_state.py  joint_mapping.py
dog_fullstack_bundle/frontend/app/services/: backend_service.py  command_worker.py  mujoco_mirror_service.py  mujoco_replay_mirror.py  replay_service.py  state_stream_worker.py
dog_fullstack_bundle/frontend/docs/: compatibility_audit.md
dog_fullstack_bundle/reports/: compatibility_fix_summary.md
dog_fullstack_bundle/tests/: run_mock_integration.py  sample_replay.csv
dog_fullstack_bundle/tools/: mock_daemon.py
sim_policy_relay/: .gitignore  DOCS.md  README.md  bench_sim.py  joystick_input.py  leggedrobot_flat.xml  pyproject.toml  relay_engine.py  requirements.txt  sim_headless.py  sim_policy_relay.py  twin_client.py
simulation/: DEBUG_GUIDE.md  REFERENCE_DATA.md  analyze_data.py  analyze_detailed.py  analyze_inertial_geom.py  auto_test.py  compare_deploy.py  data_recorder.py  fix_xml_geom.py  joystick_interface.py  plot_collected_data.py  ros2_interface.py  s2s_data_collector.py  s2s_trot_joystick.py  test_onnx.py  view_robot.py  view_test_data.py
twin_complete/: README.md  launch_twin_local.sh  main.cpp  motor_io.cpp  motor_io.hpp  twin_agent.cpp  twin_agent.hpp  twin_client.py  twin_local_console.py  twin_protocol.hpp
(+4 files in other folders)
