[project]
name = "twin-panel"
version = "0.1.0"
description = "Digital Twin Panel for Quadruped Robot"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyqt5>=5.15.0",
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
    "glfw>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local"]
